multi-cluster-gateway/multi-cluster-gateway-ilb-basic/shared-config-app-cluster/route.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: store-route-ilb
  namespace: store
  labels:
    gateway: multi-cluster-gateway-ilb
spec:
  rules:
  - forwardTo:
    - backendRef: 
        group: net.gke.io
        kind: ServiceImport
        name: store-v1
      port: 8080
      weight: 90
    - backendRef: 
        group: net.gke.io
        kind: ServiceImport
        name: store-v2
      port: 8080
      weight: 10
